fix overflow bg on mobile

--- a/packages/frontend/src/pages/home.css
+++ b/packages/frontend/src/pages/home.css
@@ -110,10 +110,11 @@ video {
     object-fit: cover;
     display: flex;
     justify-content: center;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
     position: fixed;
-    top: 15%;
+    top: 13%;
   }
 
   .hero-container {
